--- a/example/beaver.yml
+++ b/example/beaver.yml
@@ -2,7 +2,7 @@ apiVersion: beaver.cloudcrane.io/v1alpha0
 kind: Config
 spec:
   # Global variables:
-  # - Can be accumulated/overwriten over beaver config files
+  # - Can be accumulated/overwritten over beaver config files
   variables:
   - name: VAULT_KV
     value: cnpp.k8s.cloudcrane.io
