--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,7 +11,8 @@ version: '3'
 
 vars:
   VERSION: 1.0.0
-  OUTPUT: "build/beaver"
+  EXE: beaver{{exeExt}}
+  OUTPUT: "build/{{.EXE}}"
   GOLANGCI_LINT_VERSION: v1.44.0
   GOLANGCI_LINT_BASE: tools/bin/golangci-lint
   GOLANGCI_LINT_BIN: "{{.GOLANGCI_LINT_BASE}}-{{.GOLANGCI_LINT_VERSION}}"
@@ -20,19 +21,19 @@ vars:
 tasks:
   default:
     cmds:
-    - task: build
+      - task: build
 
   build:
     desc: build golang project
     cmds:
-    - mkdir -p build
-    - |
-      go build \
-        -ldflags "-X orus.io/cloudcrane/beaver/lib.version={{ .VERSION }}" \
-        -o {{.OUTPUT}} \
-        main.go
+      - mkdir -p build
+      - |
+        go build \
+          -ldflags "-X orus.io/cloudcrane/beaver/lib.version={{ .VERSION }}" \
+          -o {{.OUTPUT}} \
+          main.go
     generates:
-    - "{{.OUTPUT}}"
+      - "{{.OUTPUT}}"
 
   fetch-golangci-lint:
     desc: fetch golangci-lint tool
@@ -50,3 +51,9 @@ tasks:
     deps: [fetch-golangci-lint]
     cmds:
       - "{{.GOLANGCI_LINT_BIN}} run {{.GOLANGCI_LINT_ARGS}}"
+
+  test:
+    desc: Run the tests
+    deps: []
+    cmds:
+      - go test ./...
