add `kubectl create` feature

--- a/runner/fixtures/f1/beaver.yml
+++ b/runner/fixtures/f1/beaver.yml
@@ -13,3 +13,9 @@ spec:
     odoo:
       type: ytt
       path: vendor/ytt/odoo
+  create:
+  - type: configmap
+    name: xbus-pipelines
+    args:
+    - flag: --from-file
+      value: base/pipelines
