--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,4 +58,11 @@ upload:
       - build
   script:
     - apk add curl
-    - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file build/beaver "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/beaver/latest/beaver"'
+    - |
+      OUTPUT_FILE=$(mktemp)
+      HTTP_CODE=$(curl --silent --output $OUTPUT_FILE --write-out "%{http_code}" --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file build/beaver "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/beaver/latest/beaver")
+      echo "return $HTTP_CODE"
+      cat $OUTPUT_FILE
+      if [[ ${HTTP_CODE} -lt 200 || ${HTTP_CODE} -gt 299 ]] ; then
+        exit 1
+      fi
