--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -10,7 +10,6 @@
 version: '3'
 
 vars:
-  VERSION: 2.0.0
   EXE: beaver{{exeExt}}
   OUTPUT: "build/{{.EXE}}"
   GOLANGCI_LINT_VERSION: v1.44.0
@@ -29,7 +28,7 @@ tasks:
       - mkdir -p build
       - |
         go build \
-          -ldflags "-X orus.io/orus-io/beaver/lib.version={{ .VERSION }}" \
+          -ldflags "-X 'orus.io/orus-io/beaver/lib.version=${CI_COMMIT_TAG}' -X 'orus.io/orus-io/beaver/lib.commitSha=$(hg id -i --debug)' -X 'orus.io/orus-io/beaver/lib.buildDate=$(date)'" \
           -o {{.OUTPUT}} \
           main.go
     generates:
