--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -24,6 +24,8 @@ vars:
   # CI_COMMIT_TAG=myTag task build
   # this will use the provided version for build linking
   BUILD_VERSION: "{{.CI_COMMIT_TAG}}/{{.BUILD_COMMIT_ID}}"
+  GOOS:
+    sh: uname | tr '[:upper:]' '[:lower:]'
 
 tasks:
   default:
@@ -35,13 +37,20 @@ tasks:
     cmds:
       - mkdir -p build
       - |
-        CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
+        CGO_ENABLED=0 GOOS={{.GOOS}} GOARCH=amd64 go build \
           -a -tags netgo \
           -ldflags "-X 'orus.io/orus-io/beaver/lib.version=${CI_COMMIT_TAG}' -X 'orus.io/orus-io/beaver/lib.commitSha=$(hg id -i --debug)' -X 'orus.io/orus-io/beaver/lib.buildDate=$(date)' -w -extldflags "-static"" \
           -o {{.OUTPUT}} \
           main.go
     generates:
       - "{{.OUTPUT}}"
+
+  install:
+    desc: install binary in $GOPATH/bin
+    deps:
+      - build
+    cmds:
+      - install -m 755 {{.OUTPUT}} $GOPATH/bin
 
   fetch-golangci-lint:
     desc: fetch golangci-lint tool
