--- a/runner/fixtures/f1/base/odoo.yml
+++ b/runner/fixtures/f1/base/odoo.yml
@@ -2,5 +2,5 @@
 ---
 odoo:
   image: odoo
-  serviceAccountName: {{.namespace}}-odoo
-  role: {{.ROLE}}
+  serviceAccountName: <[namespace]>-odoo
+  role: <[ROLE]>
