--- a/runner/fixtures/f2/base/demoytt.tmpl.yaml
+++ b/runner/fixtures/f2/base/demoytt.tmpl.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: demo
-  label:
+  labels:
     mysha: #@ data.values.sha
 data:
   answer: #@ data.values.answer
