--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,10 @@ stages:
 unit_tests:
   stage: test
   image: quay.orus.io/cc/golang:1.17.6
+  variables:
+    YTT_VERSION: v0.41.1
+    YTT_SHA256: 65dbc4f3a4a2ed84296dd1b323e8e7bd77e488fa7540d12dd36cf7fb2fc77c03
+    HELM_VERSION: v3.9.0
   cache:
     key: tooling
     paths:
@@ -15,6 +19,15 @@ unit_tests:
       - .gopath/golangci-cache
       - .cache/gocache
       - tools/bin
+  before_script:
+    - curl -LO https://github.com/vmware-tanzu/carvel-ytt/releases/download/${YTT_VERSION}/ytt-linux-amd64
+    - echo "${YTT_SHA256} *ytt-linux-amd64" | sha256sum -c
+    - install -o root -g root -m 0755 ytt-linux-amd64 /usr/local/bin/ytt
+    - curl -LO https://get.helm.sh/helm-${HELM_VERSION}-linux-amd64.tar.gz
+    - curl -LO https://get.helm.sh/helm-${HELM_VERSION}-linux-amd64.tar.gz.sha256sum
+    - echo "$(cat helm-${HELM_VERSION}-linux-amd64.tar.gz.sha256sum)" | sha256sum -c
+    - tar xf helm-${HELM_VERSION}-linux-amd64.tar.gz
+    - install -o root -g root -m 0755 linux-amd64/helm /usr/local/bin/helm
   script:
     - sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b tools/bin
     - tools/bin/task test
