prove beaver build bug

--- a/runner/fixtures/f1/base/beaver.yml
+++ b/runner/fixtures/f1/base/beaver.yml
@@ -10,6 +10,9 @@ charts:
   odoo:
     type: ytt
     path: ../vendor/ytt/odoo
+  extra:
+    type: ytt
+    path: extra.tmpl.yaml
 create:
 - type: configmap
   name: xbus-pipelines
