'variables' can now be written as a mapping instead of a list

--- a/runner/fixtures/f1/base/beaver.yml
+++ b/runner/fixtures/f1/base/beaver.yml
@@ -19,3 +19,10 @@ create:
   args:
   - flag: --from-file
     value: pipelines
+vars:
+  db_type: postgres
+  dbs:
+    - db1
+    - db2
+  secret:
+    name: postgres
