Implement variable overlay with dotted paths
If an overlay variable has a dotted name, it is used as a path to patch
a nested value in the original variable.

For instance, given the following original variables:

variables:
  d:
    a: value
    b: other

A config overlay can change the 'a' value without touching the other 'd'
attributes :

variables:
  d.a: new value


The resulting variables would be :

variables:
  d:
    a: new value
    b: other

--- a/runner/fixtures/f1/base/beaver.yml
+++ b/runner/fixtures/f1/base/beaver.yml
@@ -3,6 +3,10 @@ variables:
   value: orus.io
 - name: ROLE
   value: odoo-batch
+- name: test-nested
+  value:
+    nested-value1: Value1
+    nested-value2: Value2
 charts:
   postgres:
     type: helm
