add test coverage for beaver namespaces as variables

--- a/runner/fixtures/fDisabledAsVar/base/beaver.yaml
+++ b/runner/fixtures/fDisabledAsVar/base/beaver.yaml
@@ -4,3 +4,6 @@ charts:
     type: ytt
     path: demoytt.tmpl.yaml
     disabled: <[configmapDisabled]>
+variables:
+- name: configmapDisabled
+  value: true
